css/default.css
/* ... */
@media all and (hover: hover) {
	.heading .copy-section-link-button::after {
		content: "";
		position: absolute;
		left: -0.1em;
		right: -0.1em;
		top: -0.1em;
		bottom: -0.1em;
		display: none;
	}
	.heading .copy-section-link-button:hover::after {
		display: initial;
	}
}

.heading .copy-section-link-button:hover {
	color: var(--GW-body-link-hover-color);
}
.heading .copy-section-link-button:hover,
.heading:hover .copy-section-link-button {
	opacity: 1;
}

.heading .copy-section-link-button:active {
	transform: rotateZ(45deg);
	transition:
		transform 0.05s ease;
}
.heading .copy-section-link-button.clicked {
	transform: rotateZ(135deg);
	transition:
		transform 0.15s ease;
}
.heading .copy-section-link-button:focus {
	outline: none;
}

@media all and (max-width: 649px) {
	section > .heading .copy-section-link-button {
		position: relative;
		padding: 0.15em;
		margin-left: 0.25em;
		display: none;
	}
	section > .heading:hover .copy-section-link-button {
		display: inline-flex;
	}
	section.level1 > .heading .copy-section-link-button {
		top: 2px;
	}
}
@media all and (min-width: 650px) {
	section.level1 > .heading .copy-section-link-button {
		position: absolute;
		padding: 0.22em;
		right: -1em;
		top: 3px;
	}
	section.level2 > .heading .copy-section-link-button,
	section.level3 > .heading .copy-section-link-button,
	section.level4 > .heading .copy-section-link-button,
	section.level5 > .heading .copy-section-link-button,
	section.level6 > .heading .copy-section-link-button {
		position: relative;
		padding: 0.15em;
		margin-left: 0.25em;
	}
	section.level2 > .heading .copy-section-link-button {
		top: 1px;
	}
	section.level3 > .heading .copy-section-link-button,
	section.level4 > .heading .copy-section-link-button,
	section.level5 > .heading .copy-section-link-button,
	section.level6 > .heading .copy-section-link-button {
		top: 0
	}
}

/*	Special positioning on /index.
 */
body.page-index section.level1 > .heading .copy-section-link-button {
	position: relative;
	right: -0.2em;
}
@media all and (max-width: 649px) {
	body.page-index section.level1 > .heading .copy-section-link-button {
		top: 1px;
	}
}
@media all and (min-width: 650px) {
	body.page-index section.level1 > .heading .copy-section-link-button {
		top: 0;
	}
}

/**********************************************************/
/*  Highlighted sections. (Due to extract popups, usually.)
 */

section.highlighted {
    position: relative;
}
section.highlighted::before {
    content: "";
    display: block;
    position: absolute;
    top: -0.5em;
    left: -1.25em;
    width: calc(100% + 2em);
    height: calc(100% + 1.25em);
    outline: 3px double var(--GW-section-highlighted-border-color);
    z-index: -1;
    transition:
        outline 0.15s ease 0.05s;
}
section.highlight-fading::before {
    outline: 3px double transparent;
}


/*******************/
/* COLLAPSE BLOCKS */
/*******************/
/*  Use: annotate collapsible section headers with '{.collapse}' (in the Markdown);
    for sections where I want a summary/abstract of that (eg. in /note/note.page),
    one annotate summaries to keep uncollapsed with '<div class="abstract-collapse">summary</div>'.
    (Pandoc Markdown does support a native div syntax, but it's long and ugly.)
 */

.collapse-block {
    --collapse-toggle-top-height: calc(3.0 * var(--base-font-size));
    --collapse-toggle-bottom-height: calc(2.0 * var(--base-font-size));
    --collapse-toggle-left-width: calc(0.45 * var(--base-font-size));
    --collapse-left-offset: calc(1.0 * var(--base-font-size));

    --collapse-toggle-top-icon-size: var(--collapse-toggle-top-height);
    --collapse-toggle-bottom-icon-size: var(--collapse-toggle-bottom-height);

    position: relative;
    padding-top: var(--collapse-toggle-top-height);
    padding-bottom: var(--collapse-toggle-bottom-height);
}

/*  Offset block left when expanded, so the contents are the same width as the
    enclosing content column.
 */
.collapse-block.expanded {
    margin-left: calc(-1 * var(--collapse-left-offset));
    padding-left: var(--collapse-left-offset);
}

/*  Collapse blocks with no abstract show some of their contents when collapsed.
 */
.collapse-block.no-abstract.expanded-not {
    min-height: calc(  var(--collapse-toggle-top-height)
                     + var(--collapse-toggle-bottom-height));
    padding-top: 0;
    padding-bottom: 0;
}

/************************************/
/*  Collapse block component z-order.
 */

.collapse-block.expanded-not > .abstract-collapse,
.collapse-block.expanded-not > .abstract-collapse-only {
    position: relative;
    z-index: 1;
}

.collapse-block > .disclosure-button {
    z-index: 10;
}
.collapse-block > .disclosure-button:hover {
    z-index: 11;
}

.collapse-block.expanded::before {
    z-index: 12;
}

section.collapse > .heading {
    z-index: 13;
}
.collapse-block.expanded > .abstract-collapse {
    z-index: 13;
}
.collapse-block.expanded > .collapse-content-wrapper {
    z-index: 13;
}


/***************************/
/*  Collapse block contents.
 */

/*  Block (any state).
 */
.collapse-block > .collapse-content-wrapper {
    position: relative;
    box-sizing: border-box;
}

/*  Block (collapsed).
 */

.collapse-block.expanded-not > .collapse-content-wrapper {
    overflow: hidden;
    contain: content;
}
.collapse-block.has-abstract.expanded-not > .collapse-content-wrapper {
    max-height: 0;
}
.collapse-block.no-abstract.expanded-not > .collapse-content-wrapper {
    max-height: calc(  var(--collapse-toggle-top-height)
                     + var(--collapse-toggle-bottom-height));
}

/*  Inline (collapsed).
 */
.collapse-inline.expanded-not > .collapse-content-outer-wrapper {
    display: inline-block;
}
.collapse-inline.expanded-not > .collapse-content-outer-wrapper > .collapse-content-wrapper {
    display: inline-block;
    max-width: 0;
    max-height: 0;
    overflow: hidden;
    contain: content;
}
/* ... */

